imixs-bpmn.glsp-client/bpmn-glsp/css/diagram.css
/********************************************************************************
 * Copyright (c) 2019-2022 EclipseSource and others.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * This Source Code may also be made available under the following Secondary
 * Licenses when the conditions for such availability set forth in the Eclipse
 * Public License v. 2.0 are satisfied: GNU General Public License, version 2
 * with the GNU Classpath Exception which is available at
 * https://www.gnu.org/software/classpath/license.html.
 *
 * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 ********************************************************************************/

.sprotty-graph {
    font-size: 15pt;
    border: none;
    height: 100%;
    background-size: 10px 10px;

	background-image: linear-gradient(to right, #E4E4E4 1px, transparent 1px), linear-gradient(to bottom, #E4E4E4 1px, transparent 1px);
    
}

.vs-dark .sprotty-graph { 
    /* vs-dark dark-theia theia-dark    vs light-theia theia-light  */
	background-image: linear-gradient(to right, #2A2A2A 1px, transparent 1px), linear-gradient(to bottom, #2A2A2A 1px, transparent 1px);
}

.sprotty-text {
    font-size: 12pt;
    text-anchor: middle;
}

.sprotty-node {
    stroke-width: 0;
    font-weight: bold;
}

.sprotty-label {
    stroke-width: 0;
    fill: #000;
    font-weight: inherit;
    text-align: inherit;
    font-size: 100%;
}

.sprotty-label.heading {
    font-weight: normal;
    font-size: 0.7em;
    fill: #f0f3f8;
}

.sprotty-resize-handle.selected {
    fill: #47699B;
}

.icon path {
    stroke-width: 0;
    fill: #f0f3f8;
}

.icon .icon-background {
    fill: transparent;
}


.task > .sprotty-node {
    fill: #425C81;
}

.gateway > .sprotty-node {
    fill: #C39D5C;
}

.gateway .icon path  {
    fill: #000;
}
.event.start > .sprotty-node {
	fill: #57A14C;
}

.event.end > .sprotty-node {
	fill: #BE5961;
}


.pool > .sprotty-node {
    fill: #34466199;
}



.sprotty-edge.xxsequenceflow.low:not(.selected),
.sprotty-edge.sxxequenceflow.low:not(.selected) .arrow {
    stroke: rgb(128, 90, 233);
}

.sprotty-edge.xxxsequenceflow.low:not(.selected) .arrow {
    fill: rgb(128, 90, 233);
}

/* sequence flow */
.sprotty-edge.sequenceflow:not(.selected),
.sprotty-edge.sequenceflow:not(.selected) .arrow,
.sprotty-edge.sequenceflow.medium:not(.selected),
.sprotty-edge.sequenceflow.medium:not(.selected) .arrow {
    stroke: rgb(174 190 243);
}

/* selected sequence flow */
.sprotty-edge.sequenceflow.selected,
.sprotty-edge.sequenceflow.selected .arrow,
.sprotty-edge.sequenceflow.medium.selected,
.sprotty-edge.sequenceflow.medium.selected .arrow {
    stroke: #ffdf8b;
}



/* arrow */

.sprotty-edge.sequenceflow:not(.selected) .arrow,
.sprotty-edge.sequenceflow.medium:not(.selected) .arrow {
    fill: rgb(174 190 243);
}

.sprotty-edge.sequenceflow.high:not(.selected),
.sprotty-edge.sequenceflow.high:not(.selected) .arrow {
    stroke: rgb(174 190 243);
}

.sprotty-edge.sequenceflow.high:not(.selected) .arrow {
    fill: rgb(174 190 243);
}















.sprotty-comp {
    stroke: transparent;
    fill: transparent;
}

.label-edit input {
    margin-top: -3px;
    margin-left: -3px;
}

